--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/uber.svg" />
+    <link rel="icon" type="image/svg+xml" href="/rideX.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Uber</title>
+    <title>RideX</title>
   </head>
   <body>
     <div id="root"></div>
